--- a/DutchTreat/wwwroot/index.html
+++ b/DutchTreat/wwwroot/index.html
@@ -2,8 +2,32 @@
 <html>
 <head>
     <title>index</title>
+    <style href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-   Test 
+    <h1>Dutch Treat</h1> 
+    <div>
+        <img src="img/VanGogh.jpg"/>
+        <h3>Mug</h3>
+        <ul>
+            <li>Price: $9.99</li>
+            <li>Artiust: Van G</li>
+            <li>Title:</li>
+            <li>Description: Self-portratir</li>
+        </ul>
+        <button id="buyButton">Buy</button>
+        <form>
+            <label>Username:</label>
+            <input/>
+            <label>Email:</label>
+            <input type="email" />
+            <label>Message:</label>
+            <textarea rows="4" cols="80"></textarea> 
+            <input type="submit" value="Send Message"/>
+        </form>
+    </div>
+
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
